--- a/todos/templates/todos/todo_tree.html
+++ b/todos/templates/todos/todo_tree.html
@@ -13,7 +13,7 @@ Purpose &rarr; Vision &rarr; Goals &rarr; Focus &rarr; Projects &rarr; Actions
 {% include 'todos/todo_tree_box.html' with todos=todos %}
 
 {% if orphaned %}
-Orphaned
+Orphaned (Not tied to a Purpose)
 {% include 'todos/todo_tree_box.html' with todos=orphaned %}
 {% endif %}
 
