--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,54 @@
 .strikethrough {
   text-decoration: line-through
 }
+.m-0 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
+.m-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.m-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.m-3 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.m-4 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.m-5 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.p-0 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+.p-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.p-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.p-3 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.p-4 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.p-5 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .mt-0 {
   margin-top: 0rem;
 }
