--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -18,6 +18,12 @@
   </div>
 
   <div class="block">
+    <strong>Progress:</strong>
+    <br />
+    {{ object.progress_name }}
+  </div>
+
+  <div class="block">
     <strong>Completed:</strong>
     <br />
     {{ object.completed }}
@@ -95,6 +101,12 @@
   <p class="control">
     <a href="{% url 'todos:horizon-detail-list' object.horizon %}" class="button is-text">
       View All {{ object.horizon_name }}
+    </a>
+  </p>
+
+  <p class="control">
+    <a href="{% url 'todos:horizon-detail-list' object.horizon %}?view=kanban" class="button is-text">
+      View Kanban
     </a>
   </p>
 </div>
