--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -21,7 +21,7 @@
       {% if not field.name == 'horizon' %}
       <label class="label" for="{{ field.auto_id }}">{{ field.label }}</label>
       {% endif %}
-      <div class="control">
+      <div class="control {% if field.name == 'progress' %} select {% endif %}">
         {% if field.name == 'parents' or field.name == 'children' %}
           <div class="box">
             {{ field }}
