add alpine drag and drop events

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,3 +166,8 @@
   background-position : calc(-2 * var(--radius)) 0;
 }
 /* tree end */
+
+/* kanban */
+.kanban-adding {
+  background-color: #ddd;
+}
