fixed redirection for simple mode

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,23 @@
 {% block content %}
 {% if user.is_authenticated %}
   <h1 class="title">Welcome {{ user.first_name|default:user.username }}</h1>
-  <p>
-    Get started by understanding
-    <strong>horizons</strong>
-    <a href="{% url 'todos:horizon-view-list' %}">
+  {% if APP_MODE_SIMPLE %}
+    Let's get started
+    <a href="{% url 'todos:horizon-detail-list' 'AC' %}">
       here.
     </a>
-  </p>
-  <p>
-    Then click on a particular horizon to start creating some of your own.
-  </p>
+  {% else %}
+    <p>
+      Get started by understanding
+      <strong>horizons</strong>
+      <a href="{% url 'todos:horizon-view-list' %}">
+        here.
+      </a>
+    </p>
+    <p>
+      Then click on a particular horizon to start creating some of your own.
+    </p>
+  {% endif %}
 {% else %}
   <h1 class="title">Hello</h1>
   <p>
